# realtime-analytics-platform

./: .gitignore  README.md  db_connect.sh  git_config.sh  post-create.sh  project_system_prompt.xml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml  docker-compose.yml
docs/: Phase 2.1 kafka production hardening.md  phase1_technical_summary.md
infrastructure/postgres/: init.sql
infrastructure/prometheus/: prometheus.yml
scripts/: post-create.sh
services/docs/: phase1_technical_summary.md  phase2_kafka_integration.md
services/infrastructure/postgres/: init.sql
services/ingestion/: main.py  pyproject.toml  run.sh  test_kafka_pipeline.sh  worker.py  worker.sh
services/ingestion/app/api/: metrics.py
services/ingestion/app/core/: config.py  database.py  dlq.py  kafka.py  metrics_tracker.py  redis_client.py
services/ingestion/app/models/: metric.py
services/ingestion/app/schemas/: metric.py  metric_event.avsc  metric_event_v1.avsc  metric_event_v2.avsc  metric_event_v3.avsc
services/ingestion/tests/: ingest_real_world_data.py  test_kafka.py  test_kafka_pipeline.py
services/query_service/: pyproject.toml
services/shared/: pyproject.toml
services/shared/schemas/: metric.py  metric_event_v2.avsc
services/worker/: pyproject.toml  run.sh
services/worker/app/: consumer.py
services/worker/app/core/: dlq.py  logging.py
services/worker/app/models/: metric.py
services/worker/app/schemas/: metric_event_v3.avsc
