[project]
name = "ingestion-service"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "attrs>=25.4.0",
    "authlib>=1.6.7",
    "cachetools>=7.0.0",
    "confluent-kafka>=2.13.0",
    "fastapi>=0.128.0",
    "fastavro>=1.12.1",
    "httpx>=0.28.1",
    "prometheus-client>=0.24.1",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.22",
    "redis>=7.1.0",
    "sqlalchemy[asyncio]>=2.0.46",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.40.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
]
