[project]
name = "shared"
version = "0.1.0"
description = "Shared models, schemas, and utilities for the analytics platform"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["models", "schemas"]
