[project]
name = "worker"
version = "0.1.0"
description = "Kafka consumer worker — ingests metrics from Kafka into TimescaleDB"
requires-python = ">=3.12"
dependencies = [
    "confluent-kafka[avro]>=2.4",
    "fastavro>=1.9",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "structlog>=24.0",
    "pydantic-settings>=2.0",
    "prometheus-client>=0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"] # ← this is the fix
